docs/pages/versions/v57.0.0/sdk/camera.mdx
---
title: 摄像头
description: 一个用于渲染设备前置或后置摄像头预览的 React 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-camera'
packageName: 'expo-camera'
exampleName: 'with-camera'
iconUrl: '/static/images/packages/expo-camera.png'
platforms: ['android*', 'ios*', 'web', 'expo-go']
---

import { GithubIcon } from '@expo/styleguide-icons/custom/GithubIcon';

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import { BoxLink } from '~/ui/components/BoxLink';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';

`expo-camera` 提供了一个 React 组件，用于渲染设备前置或后置摄像头的预览。摄像头的参数，如缩放、手电筒和闪光模式，都可以调整。使用 `CameraView`，你可以拍照并录制视频，这些内容会保存到应用的缓存中。该组件还能够检测预览中出现的条形码。在你的设备上运行 [示例](#usage) 以查看这些功能如何协同工作。

## 安装

<APIInstallSection />

## app 配置中的配置

如果你在项目中使用 config plugins（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），可以使用 `expo-camera` 内置的 [config plugin](/config-plugins/introduction/) 进行配置。该插件允许你配置一些无法在运行时设置的属性，这些属性需要重新构建新的应用二进制文件后才会生效。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-camera",
        {
          "cameraPermission": "允许 $(PRODUCT_NAME) 访问你的相机",
          "microphonePermission": "允许 $(PRODUCT_NAME) 访问你的麦克风",
          "recordAudioAndroid": true,
          "barcodeScannerEnabled": true
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'cameraPermission',
      platform: 'ios',
      description: '用于设置 [`NSCameraUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的相机"',
    },
    {
      name: 'microphonePermission',
      platform: 'ios',
      description: '用于设置 [`NSMicrophoneUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的麦克风"',
    },
    {
      name: 'recordAudioAndroid',
      platform: 'android',
      description:
        '一个布尔值，用于决定是否在 Android 上启用 `RECORD_AUDIO` 权限。',
      default: 'true',
    },
    {
      name: 'barcodeScannerEnabled',
      description:
        '一个布尔值，用于决定是否启用条码扫描支持。禁用后，在不需要条码扫描时可减小应用体积。',
      default: 'true',
    },
  ]}
/>

要本地化 iOS 摄像头或麦克风权限消息，请将 `NSCameraUsageDescription` 或 `NSMicrophoneUsageDescription` 添加到每个[语言环境文件](/guides/localization/#translating-app-metadata)中的 `ios` 对象。请将 `cameraPermission` 和 `microphonePermission` 保持为默认值。Expo 会在预构建期间将本地化值写入 **InfoPlist.strings**。

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)）（而是手动使用原生 **android** 和 **ios** 项目），那么你需要在原生项目中配置以下权限：

**Android**

- `expo-camera` 会自动将 `android.permission.CAMERA` 权限添加到你项目的 **android/app/src/main/AndroidManifest.xml**。如果你想录制带声音的视频，请包含 `RECORD_AUDIO` 权限：

  ```xml
  <!-- 添加的权限 -->
  <uses-permission android:name="android.permission.CAMERA" />

  <!-- 仅在录制带声音的视频时添加 -->
  <uses-permission android:name="android.permission.RECORD_AUDIO" />
  ```

- 然后，调整 **android/build.gradle** 文件，在所有其他仓库后面添加一个新的 maven 块，如下所示：

  ```groovy
  allprojects {
    repositories {
        // * 你的其他仓库在这里 *
        // * 在其他仓库 / 块之后添加一个新的 maven 块 *
        maven {
            // expo-camera 打包了一个自定义的 com.google.android:cameraview
            url "$rootDir/../node_modules/expo-camera/android/maven"
        }
    }
  }
  ```

**iOS**

- 将 `NSCameraUsageDescription` 和 `NSMicrophoneUsageDescription` 键添加到你项目的 **ios/[app]/Info.plist**：

  ```xml
  <key>NSCameraUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的相机</string>
  <key>NSMicrophoneUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的麦克风</string>
  ```

</ConfigReactNative>

## 用法

> **警告** 在任意时刻只能有一个 Camera 预览处于活动状态。如果你的应用中有多个屏幕，当某个屏幕失去焦点时，你应该卸载 `Camera` 组件。

<SnackInline label='基本摄像头用法' dependencies={['expo-camera']}>

```tsx
import { CameraView, CameraType, useCameraPermissions } from 'expo-camera';
import { useState } from 'react';
import { Button, StyleSheet, Text, TouchableOpacity, View } from 'react-native';

export default function App() {
  const [facing, setFacing] = useState<CameraType>('back');
  const [permission, requestPermission] = useCameraPermissions();

  if (!permission) {
    // 摄像头权限仍在加载中。
    return <View />;
  }

  if (!permission.granted) {
    // 摄像头权限尚未授予。
    return (
      <View style={styles.container}>
        <Text style={styles.message}>我们需要你的权限来显示摄像头</Text>
        <Button onPress={requestPermission} title="授予权限" />
      </View>
    );
  }

  function toggleCameraFacing() {
    setFacing(current => (current === 'back' ? 'front' : 'back'));
  }

  return (
    <View style={styles.container}>
      <CameraView style={styles.camera} facing={facing} />
      <View style={styles.buttonContainer}>
        <TouchableOpacity style={styles.button} onPress={toggleCameraFacing}>
          <Text style={styles.text}>翻转摄像头</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
  },
  message: {
    textAlign: 'center',
    paddingBottom: 10,
  },
  camera: {
    flex: 1,
  },
  buttonContainer: {
    position: 'absolute',
    bottom: 64,
    flexDirection: 'row',
    backgroundColor: 'transparent',
    width: '100%',
    paddingHorizontal: 64,
  },
  button: {
    flex: 1,
    alignItems: 'center',
  },
  text: {
    fontSize: 24,
    fontWeight: 'bold',
    color: 'white',
  },
});
```

</SnackInline>

### 高级用法

<BoxLink
  title="Camera 应用示例"
  description="一个完整示例，展示如何拍照并显示照片。使用 TypeScript 编写。"
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-camera"
/>

## Web 支持

大多数浏览器都支持某种版本的网络摄像头功能，你可以在这里查看[网页摄像头浏览器支持情况](https://caniuse.com/#feat=stream)。由于浏览器中无法访问本地文件系统路径，图像 URI 始终以 base64 字符串返回。

### Chrome `iframe` 用法

在使用 **Chrome 64+ 版本** 时，如果你尝试在跨源 iframe 中使用网络摄像头，将不会显示任何内容。要在你的 iframe 中添加对摄像头的支持，只需将属性 `allow="microphone; camera;"` 添加到 iframe 元素中：

```html
<iframe src="..." allow="microphone; camera;">
  <!-- <CameraView /> -->
</iframe>
```

## API

```js
import { CameraView } from 'expo-camera';
```

<APISection packageName="expo-camera" apiName="Camera" exposeAllClassPropsInSidebar />

## 权限

### Android

此包会自动为你的应用添加 `CAMERA` 权限。如果你想录制带音频的视频，你必须在 **app.json** 中的 [`expo.android.permissions`](../config/app/#permissions) 数组里包含 `RECORD_AUDIO`。

<AndroidPermissions permissions={['CAMERA', 'RECORD_AUDIO']} />

### iOS

此库使用以下用途描述键：

<IOSPermissions permissions={['NSCameraUsageDescription', 'NSMicrophoneUsageDescription']} />
